Priemiro teste servidor ddl